<resources>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <string name="app_name">Runn</string>
    <string name="content_notify">Hey you, it\'s time  to running!</string>
    <string name="content_study_reminder">Be persistent!</string>
    <string name="turn_on_reminders">Turn on reminders</string>
    <string name="turn_off_reminders">Turn off reminders</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBoOe9qGN3jMI0_AecKK19kAlpS9PxVMVo</string>
    <string name="onboard_introduce_title_1">Theo dõi tập luyện</string>
    <string name="onboard_introduce_content_1">Dễ dàng phân tích dữ liệu tập luyện</string>
    <string name="onboard_introduce_title_2">Giao diện thân thiện</string>
    <string name="onboard_introduce_content_2">Giao diện dễ dàng sử dụng , không gây khó khăn</string>
    <string name="onboard_introduce_title_3">Tiện ích mở rộng</string>
    <string name="onboard_introduce_content_3">Có thể tắt ứng dụng mà không gây cản trở trong việc tập luyện</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="can_not_null">You cannot leave this field empty</string>
    <string name="login_account">Login Account</string>
    <string name="account_not_correct">Wrong password or email. Please try again.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="no_account">Do not have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_account">Signup Account</string>
    <string name="your_name">Your name</string>
    <string name="your_nick_name">Your nick name</string>
    <string name="day_of_birth">Day of birth</string>
    <string name="confirm_password">Cofirm password</string>
    <string name="register">Register</string>
    <string name="agree_term_and_condition">"You don't agree to the terms and conditions"</string>
    <string name="remember_account">Remember account?</string>
    <string name="ok">Ok</string>
    <string name="login_agree_text">I argee with the &lt;a href="https://eupgroup.net/apps/heyjapan/terms.html">Terms and conditions&lt;/a></string>
    <string name="invalid_email">Email invalidate</string>
    <string name="invalid_date_of_birth">Invalid date of birth</string>
    <string name="invalid_password">Password must contain at least 6 characters</string>
    <string name="match_submit_password">The password does not match</string>
    <string name="no_connect">Internet connection failed. \nPlease check your internet settings.</string>
    <string name="fail_register">Register account failure</string>
    <string name="please_try_again">Please try again...</string>
    <string name="welcome">Welcome %s\nPlease enter the weight (kg)</string>
    <string name="your_weight">Your weight</string>
    <string name="create_now">Create an account</string>
    <string name="setting">Setting</string>
    <string name="log_out">Logout</string>
    <string name="version_app">Application version</string>
    <string name="account">Account</string>
    <string name="overview">Overview</string>
    <string name="support">Support</string>
    <string name="device_language">Device language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="reminder">Reminder</string>
    <string name="policy">Policy</string>
    <string name="feedback">Feedback</string>
    <string name="tell_friend">Tell friend</string>
    <string name="rate">Rate</string>
    <string name="share_with">Share with</string>
    <string name="practice_reminder">Practice reminder</string>
    <string name="save">Save</string>
    <string name="running">Running</string>
    <string name="payment_success_content">Wish you have a fun and rewarding time learning with HeyChina</string>
    <string name="payment_fail">Payment fail</string>
    <string name="loading">Loading...</string>
</resources>