<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp">

            <androidx.appcompat.widget.AppCompatImageView
                app:layout_constraintTop_toBottomOf="@id/et_weight"
                app:layout_constraintBottom_toTopOf="@id/btn_continue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/img_setup"
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/margin_20"
                android:layout_height="0dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/svn_avo"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_30"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.devapp.runningapp.ui.widgets.LoginItemView
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_30"
                android:layout_marginBottom="@dimen/margin_10"
                android:inputType="text"
                app:item_asterisk="true"
                app:item_hint="@string/your_nick_name"
                app:item_icon="@drawable/ic_user"
                app:item_icon_red="@drawable/ic_user_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWelcome"
                app:layout_constraintVertical_bias=".1" />

            <com.devapp.runningapp.ui.widgets.LoginItemView
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_30"
                android:layout_marginBottom="@dimen/margin_10"
                android:inputType="text"
                app:item_asterisk="true"
                app:item_hint="@string/your_weight"
                app:item_icon="@drawable/ic_scale"
                app:item_icon_red="@drawable/ic_weight_red"
                app:layout_constraintBottom_toTopOf="@id/btn_continue"
                app:layout_constraintEnd_toEndOf="@id/et_name"
                app:layout_constraintStart_toStartOf="@id/et_name"
                app:layout_constraintTop_toBottomOf="@id/et_name"
                app:layout_constraintVertical_bias=".02" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue"
                style="@style/AppWidget.Button.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/svn_avo_bold"
                android:text="@string/next"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>