<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:autofit="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/layout_panda_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/bg_login" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_panda_login" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_18"
            android:src="@drawable/ic_back"
            android:tint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
             />
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_panda_signin">

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_28"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_28"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/svn_avo_bold"
                android:text="@string/login_account"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_warning_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_28"
                android:layout_marginTop="8dp"
                android:layout_marginRight="@dimen/margin_28"
                android:drawableStart="@drawable/ic_warning"
                android:drawablePadding="8dp"
                android:fontFamily="@font/svn_avo_bold"
                android:text="@string/account_not_correct"
                android:textColor="@color/colorRed_3"
                android:textSize="12sp"
                android:visibility="gone"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <com.devapp.runningapp.ui.widgets.LoginItemView
                android:id="@+id/item_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_30"
                android:layout_marginBottom="@dimen/margin_12"
                android:inputType="textEmailAddress"
                app:item_asterisk="true"
                app:item_hint="@string/email"
                app:item_icon="@drawable/ic_email"
                app:item_icon_red="@drawable/ic_email_red" />

            <com.devapp.runningapp.ui.widgets.LoginItemView
                android:id="@+id/item_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_30"
                android:layout_marginBottom="@dimen/margin_12"
                android:inputType="textPassword"
                app:item_asterisk="true"
                app:item_hint="@string/password"
                app:item_icon="@drawable/ic_password"
                app:item_icon_red="@drawable/ic_password_red" />

            <RelativeLayout
                android:id="@+id/layout_policy_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_28"
                android:layout_marginTop="14dp"
                android:layout_marginRight="@dimen/margin_28"
                android:layout_marginBottom="20dp">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_policy_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    app:buttonTint="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/tv_policy_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/cb_policy_login"
                    android:fontFamily="@font/svn_avo"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/remember_account"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    style="@style/AppWidget.Button.Default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/svn_avo_bold"
                    android:text="@string/login"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/pb_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:theme="@style/PrimaryStyle"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/custom_background_border_grey_sdp6">

                <ProgressBar
                    android:id="@+id/pb_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:theme="@style/GrayStyle"
                    android:visibility="gone" />

                <RelativeLayout
                    android:id="@+id/btn_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ic_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="14dp"
                        android:layout_toStartOf="@id/tv_login_with_google"
                        android:clickable="false"
                        android:src="@drawable/ic_google" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_login_with_google"
                        style="@style/AppWidget.Button.Default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:clickable="false"
                        android:maxLines="1"
                        android:text="@string/login_with_google"
                        android:textColor="@color/colorText_Day_2"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="18sp"
                        app:autoSizeMinTextSize="6sp"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintWidth_percent="0.66"
                        autofit:ignore="MissingPrefix" />
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/btn_register_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/svn_avo"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/no_account"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>